...
            buttonText: result.buttonText,
            completion: { [weak self] in
                guard let self = self else { return }
                
                presenter.restartGame()
            },
            accessibilityIdentifier: "Game results"
        )
        
        alertPresenter.present(alertModel)
    }
    
    func highlightImageBorder(isCorrectAnswer: Bool) {
...
